# c-programming-design-patterns

./: .gitignore  CMakeLists.txt  README.md  cspell.config.yaml
command-table/: command-table.md
object-pattern/: object-pattern.md
object-pattern/object-pattern-project/: CMakeLists.txt  example_object.c  example_object.h  main.c  vehicle.c  vehicle.h
opaque-pattern/: opaque-pattern.md
opaque-pattern/opaque-pattern-project/: CMakeLists.txt  main.c  vehicle.c  vehicle.h
opaque-pointer/: opaque-pointer.md
return-value-pattern/: return-value-pattern.md
return-value-pattern/return-value-pattern-project/: CMakeLists.txt  four_digit_display.c  four_digit_display.h  main.c
singleton/: singleton.md
singleton/singleton-project-1/: CMakeLists.txt  main.c  singleton_int.c  singleton_int.h
singleton/singleton-project-2/: CMakeLists.txt  main.c  singleton_int.c  singleton_int.h
