cmake_minimum_required(VERSION 3.0.0)
project(c-programming-design-patterns VERSION 0.1.0)

add_subdirectory(object-pattern/object-pattern-project)
add_subdirectory(singleton/singleton-project-1)
add_subdirectory(singleton/singleton-project-2)
add_subdirectory(opaque-pattern/opaque-pattern-project)
add_subdirectory(return-value-pattern/return-value-pattern-project)
